# nebula

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.zig  build.zig.zon  db.sh  iso.sh  limine.cfg  limine.conf  linker.ld  run.sh  rust-toolchain.toml  x86_64-nebula_os.json
.cargo/: config.toml
src/: common.rs  debug.rs  default_font.zig  gdt.rs  logger.rs  main.rs  main.zig  panic.rs  serial.rs  terminal.zig  vga_buffer.rs
src/arch/x86_64/: cpuid.rs  e9.rs  gdt.rs  gdt.zig  idt.rs  idt.zig  isr.rs  mod.rs  utils.s
src/arch/x86_64/asm/: cpuid.asm  entry.asm  gdt.asm  idt.asm  io.asm  isrs.asm
src/boot/: limine.rs  mod.rs
src/drivers/: serial.rs
src/hal/: mod.rs
src/kernel/: mod.rs
